2.0.79 (#2)
* 2.0.79

* remove DebugLogger

* Update DebugLogger.java